# Studies

./: README.md  bla.md  conftest.py  notes.md  pyproject.toml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/source/: notes.doctree
docs/_build/_sources/source/: notes.md.txt
docs/_build/source/: notes.html
docs/source/: notes.md
src/: model.py
src/allocation/: config.py  orm.py
src/allocation.egg-info/: SOURCES.txt
src/allocation/adapters/: orm.py  repository.py
src/allocation/domain/: model.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py
