[tool.poetry]
name = "tdd-project"
version = "0.1.0"
description = "Practical application of TDD Pattern according to Architecture Patterns with Python case"
authors = ["Giulia Ribeiro de Carvalho"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
